--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,11 @@
 
 {% block content %}
 
-<h1>blog users!</h1>
+<h1>blog users!!<span class="loggedinuser">&nbsp;&nbsp;&nbsp;logged in user is{# user.username #}</span></h1>
 
 <ul>
 {% for user in users %}
-<li><a href="/blog/{{ user.username }}">{{ user.username }}</a></li>
+<li><a href="/blog/{{ user.username }}">{{ user.username }}</a></li><br>
 {% endfor %}
 </ul>
 
