--- a/templates/base.html
+++ b/templates/base.html
@@ -7,15 +7,25 @@
         <link rel="stylesheet" href="/css/styles.css">
     </head>
     <body>
+        <h1>
+            <a href="/">Blogz!</a>
+            {% if user %}
+            <span class="welcome">Welcome {{ user.username }}</span>
+            {% endif %}
+        </h1>
         <nav>
             <ul>
                 <li><a href="/">home</a></li>
                 <li><a href="/blog">all posts</a></li>
                 <li><a href="/blog/newpost">new post</a></li>
+                <li><a href="/stats">stats</a></li>
             </ul>
             <ul id="user-account">
-                <li><a href="/login">login</a></li>
+                {% if user %}
                 <li><a href="/logout">logout</a></li>
+                {% else %}
+                <li><a href="/login">login</a></li>
+                {% endif %}
             </ul>
         </nav>
         {% block content %}
