--- a/templates/blog.html
+++ b/templates/blog.html
@@ -2,17 +2,20 @@
 
 {% block content %}
 
-<h1>blog posts!</h1>
+<h1>blog posts!  this is blog.html</h1>
 
 {% for post in posts %}
 
 <h2><a href="/blog/{{ post.key().id() }}">{{ post.title }}</a></h2>
 <p>{{ post.body }}</p>
 <!-- TODO add author w/ link to author's blog page -->
-
+<p class="post-author">
+    written by <a href="/blog/user/{{ post.author.username }}">{{ post.author.username }}</a>
+</p>
 {% endfor %}
 
 {# below is navigation code from class BlogIndexHandler(BlogHandler): main.py line 104 #}
+
 
 {% if username %}
     {% if prev_page %}
