tweaked ORM for stats page

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
                 <li><a href="/">home</a></li>
                 <li><a href="/blog">all posts</a></li>
                 <li><a href="/blog/newpost">new post</a></li>
-                <li><a href="/stats">stats</a></li>
+                <li><a href="/stats">statistics</a></li>
             </ul>
             <ul id="user-account">
                 {% if user %}
@@ -30,5 +30,6 @@
         </nav>
         {% block content %}
         {% endblock %}
+        <br><br>
     </body>
 </html>
